Introduces ErrorProne and fixes issues in -testhelpers