@@ -96,6 +96,7 @@
         <version.build-helper-maven-plugin>3.6.0</version.build-helper-maven-plugin>
         <version.checkstyle.maven>3.6.0</version.checkstyle.maven>
         <version.copy-rename-maven-plugin>1.0.1</version.copy-rename-maven-plugin>
+        <version.error-prone>2.38.0</version.error-prone>
         <version.flatten-maven-plugin>1.7.0</version.flatten-maven-plugin>
         <version.jacoco>0.8.13</version.jacoco>
         <version.jsr305>3.0.2</version.jsr305>
@@ -238,10 +239,37 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
                             <showWarnings>true</showWarnings>
+                            <fork>true</fork>
                             <compilerArgs>
                                 <arg>-Werror</arg>
                                 <arg>-Xlint:deprecation,removal,rawtypes,unchecked,-options</arg>
+
+                                <!-- for ErrorProne -->
+                                <arg>-XDcompilePolicy=simple</arg>
+                                <arg>--should-stop=ifError=FLOW</arg>
+                                <arg>
+                                    -Xplugin:ErrorProne \
+                                    -Xep:PatternMatchingInstanceof:OFF \
+                                    -Xep:EqualsGetClass:OFF
+                                </arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                             </compilerArgs>
+                            <annotationProcessorPaths>
+                                <path>
+                                    <groupId>com.google.errorprone</groupId>
+                                    <artifactId>error_prone_core</artifactId>
+                                    <version>${version.error-prone}</version>
+                                </path>
+                            </annotationProcessorPaths>
                         </configuration>
                     </plugin>
 
